Fix Errors Iteration 1: Implement GDPR-compliant User Data Deletion After 10 Years